# gedixr

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  environment-dev.yml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
api/: index.html
docs/: api.md  download.md  index.md  installation.md  license.md  quality.md  quickstart.md  variables.md
download/: index.html
gedixr/: ancillary.py  cli.py  constants.py  download.py  extract.py  gedi.py  log.py  mapping.py  xr.py
installation/: index.html
license/: index.html
quality/: index.html
quickstart/: index.html
search/: search_index.json
variables/: index.html
