[project]
name = "gedixr"
version = "0.3.0"
authors = [
  {name="Marco Wolsza", email="marco.wolsza@uni-jena.de" },
]
description = "GEDI L2A/L2B -> GeoParquet & GeoDataFrame/Xarray"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "h5netcdf",
    "tqdm",
    "geocube",
    "pyarrow"
]

[project.urls]
Repository = "https://github.com/maawoo/gedixr"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
