[project]
name = "gedixr"
version = "0.4.0"
authors = [
  {name="Marco Wolsza", email="marco.wolsza@uni-jena.de" },
]
description = "GEDI L2A/L2B -> GeoParquet & GeoDataFrame/Xarray"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "geopandas>=1.0.0",
    "h5py",
    "tqdm",
    "geocube",
    "pyarrow"
]

[project.urls]
Repository = "https://github.com/maawoo/gedixr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
